--- a/api-specificatie/backoffice.yaml
+++ b/api-specificatie/backoffice.yaml
@@ -28,13 +28,13 @@ tags:
 #      description: todo
 #      url: 'todo'
 paths:
-  /abonnementen/organisatie:
-    post:
-      tags:
-        - Verwerken abonnementen
-      summary: Abonneren op indicaties voor een specifieke organisatie
-      operationId: postAbonnementOrganisatie
-      parameters:
+  /abonnementen/abonnementRecord:
+      post:
+        tags:
+          - Verwerken abonnementen
+        summary: Abonneren op een specifiek record
+        operationId: postAbonnementRecord
+        parameters:
         - in: header
           name: X-orgKey
           description: Uniek ID van de organisatie binnen het netwerk
@@ -42,42 +42,34 @@ paths:
             type: integer
             format: int32
           required: true
-        - in: header
-          name: X-Request-ID
-          description: Identificatie van het request
-          schema:
-            type: string
+        requestBody:
           required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                recordType:
-                  type: string
-                  enum: ["wlzindicatie"]
-                eventType:
-                  description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                  type: string
-                  enum: ["all","create", "update"]
-                organisatieId:
-                  description: identificatie van de organisatie
-                  type: string
-                  minLength: 9
-                  maxLength: 9
-                organisatieIdType:
-                  description: type identificatie van de organisatie
-                  type: string
-                  enum: ["UZOVI"]
-              required:
-                - event
-                - organisatieId
-                - organisatieIdType
-      callbacks:   # Callback definition
-        notificatie:   # Event name
-          '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  record:
+                    description: naam van entiteit # of entiteitID?
+                    type: string
+                  eventType:
+                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    type: string
+                    enum: ["all","create", "update"]
+                  organisatieId:
+                    description: identificatie van de organisatie
+                    type: string
+                  organisatieIdType:
+                    description: type identificatie van de organisatie
+                    type: string
+                required:
+                  - record
+                  - event
+                  - organisatieId
+                  - organisatieIdType
+        callbacks:   # Callback definition
+          notificatie:   # Event name
+            '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
               post:
                 parameters:
                 - in: header
@@ -94,17 +86,17 @@ paths:
                       schema:
                         type: object
                         properties:
-                            timestamp:
-                                type: string
-                                format: date-time
-                            abonnementId:
+                          timestamp:
                               type: string
-                              format: uuid
-                            eventType:
-                              type: string
-                              enum: ["create", "update"]
-                            recordID:
-                              type: string
+                              format: date-time
+                          abonnementId:
+                            type: string
+                            format: uuid
+                          eventType:
+                            type: string
+                            enum: ["create", "update"]
+                          entiteitID:
+                            type: string
                         required:
                           - timestamp
                           - abonnementId
@@ -113,17 +105,20 @@ paths:
                 responses:   # Expected responses to the callback message
                   '200':
                     description: Your server returns this code if it accepts the callback
-      responses:
-        '201':
-          description: Abonnement aangemaakt
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  abonnementId:
-                    type: string
-                    format: uuid
+        responses:
+          '201':
+            description: Abonnement aangemaakt
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    abonnementId:
+                      type: string
+                      format: uuid
+          '400':
+            description: Ongeldig Record - Abonnement niet aangemaakt
+            content: {}
   /abonnementen/persoon:
       post:
         tags:
