--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -146,6 +146,103 @@ paths:
           '400':
             description: Ongeldig Record - Abonnement niet aangemaakt
             content: {}
+  /netwerkpunt/abonnementPersoon:
+      post:
+        tags:
+          - netwerkpunt
+        summary: Abonneren op een specifiek persoon
+        operationId: postAbonnementPersoon
+        parameters:
+        - in: header
+          name: X-orgKey
+          description: Uniek ID van de organisatie binnen het netwerk
+          schema:
+            type: integer
+            format: int32
+          required: true
+        - in: header
+          name: X-Request-ID
+          description: Identificatie van het request
+          schema:
+            type: string
+          required: true
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  recordType:
+                    type: string
+                    enum: ["wlzindicatie"]
+                  eventType:
+                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    type: string
+                    enum: ["all","create", "update"]
+                  persoonId:
+                    description: identificatie persoon
+                    type: string
+                  persoonIdType:
+                    description: type identificatie persoon
+                    type: string
+                    enum: ["BSN"]
+                required:
+                  - event
+                  - organisatieId
+                  - persoonIdType
+        callbacks:   # Callback definition
+          notificatie:   # Event name
+            '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
+              post:
+                parameters:
+                - in: header
+                  name: X-orgKey
+                  description: Uniek ID van de organisatie binnen het netwerk
+                  schema:
+                    type: integer
+                    format: int32
+                  required: true
+                requestBody:   # Contents of the callback message
+                  required: true
+                  content:
+                    application/json:
+                      schema:
+                        type: object
+                        properties:
+                          timestamp:
+                              type: string
+                              format: date-time
+                          abonnementId:
+                            type: string
+                            format: uuid
+                          eventType:
+                            type: string
+                            enum: ["create", "update"]
+                          recordID:
+                            type: string
+                        required:
+                          - timestamp
+                          - abonnementId
+                          - eventType
+                          - message
+                responses:   # Expected responses to the callback message
+                  '200':
+                    description: Your server returns this code if it accepts the callback
+        responses:
+          '201':
+            description: Abonnement aangemaakt
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    abonnementId:
+                      type: string
+                      format: uuid
+          '400':
+            description: Ongeldig BSN - Abonnement niet aangemaakt
+            content: {}
   /netwerkpunt/zendNotificatie:
     post:
       tags:
